node syntax changed/classroom yml changed

--- a/frontend/angular.json
+++ b/frontend/angular.json
@@ -131,6 +131,10 @@
           }
         }
       }
-    }},
-  "defaultProject": "capstone-frontend"
+    }
+  },
+  "defaultProject": "capstone-frontend",
+  "cli": {
+    "analytics": "9c570cde-c3af-4129-b774-de0d6c1f0750"
+  }
 }
